--- a/test_files/tester_bullet_issues-html.html
+++ b/test_files/tester_bullet_issues-html.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
 	<head>
 		<title>
-			Z:\\ydh-doc-conversion-service\\test_files\\tester_bullet_issues-html.html
+			C:\\doc-conversion-service\\test_files\\tester_bullet_issues-html.html
 		</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<style type="text/css">
